delete: jquery-ui.css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-    <title>VFD流程设计器</title>
+    <title>VFDP流程设计器</title>
   </head>
   <body>
     <div id="app"></div>
