modify: 修改resizable-dom依赖

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?ad5a868b3c6608e3580f2f7e4d76d66d";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </body>
 </html>
