--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         top: 0;
         width: 51%;
         height: 100%;
-        background: #666;
+        background: #409EFF;
         /* Old browsers */
         z-index: 99;
         -webkit-transform: translateX(0);
